[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-call"
version = "0.1.0"
description = "Unified CLI and Python API for various AI agent chat tools (jiuwenclaw, openclaw, opencode, hermes)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pexpect>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
agent-call = "agent_call.__main__:main"

[tool.setuptools.packages.find]
include = ["agent_call*"]
